--- a/src/sass/component/_Card.scss
+++ b/src/sass/component/_Card.scss
@@ -1,24 +1,24 @@
 .card__container {
-  width: 354px;
+  @include cardWithScale;
   cursor: pointer;
 
   .card__contents {
     display: grid;
     gap: 0.5rem;
     img {
-      width: 354px;
+      @include cardWithScale;
       height: 236px;
       border-radius: 12px;
     }
 
     h2 {
       font-weight: 500;
-      font-size: 22px;
+      font-size: 1.375rem;
       line-height: 30px;
     }
 
     p {
-      font-size: 15px;
+      font-size: 0.9375rem;
     }
 
     .brand-et-price {
@@ -35,7 +35,7 @@
 
       p {
         font-weight: 400;
-        font-size: 16px;
+        font-size: 1rem;
         line-height: 20px;
         color: #999faa;
       }
