--- a/src/sass/ui/_SearchInput.scss
+++ b/src/sass/ui/_SearchInput.scss
@@ -1,5 +1,11 @@
+@mixin inSearchFonts {
+  font-weight: 500;
+  font-size: 1.25rem;
+  line-height: 26px;
+}
+
 .search__container {
-  background: #ffffff;
+  background: $primary-color;
   border-radius: 20px;
   height: 122px;
   width: 100%;
@@ -18,14 +24,12 @@
     display: flex;
     align-items: center;
     input {
-      background: #f2f4f8;
+      background: $auxiliary-color;
       width: 642px;
       height: 74px;
       padding-left: 1rem;
       border: none;
-      font-weight: 500;
-      font-size: 20px;
-      line-height: 26px;
+      @include inSearchFonts;
       color: #000000;
 
       @media screen and (max-width: 768px) {
@@ -36,15 +40,13 @@
 
   .search__container--action {
     button {
-      background: #000000;
+      background: $secondary-color;
       border: none;
       width: 110px;
       height: 74px;
       cursor: pointer;
-      font-weight: 500;
-      font-size: 20px;
-      line-height: 26px;
-      color: #ffffff;
+      @include inSearchFonts;
+      color: $primary-color;
     }
   }
 }
